# embeddings-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  _typos.toml  deny.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
contract/: openapi.json
models/: config.json
src/: main.rs
tests/: openapi_contract.rs
